# fzyr

./: Cargo.toml  LICENSE  README.md
snapcraft/: .gitignore  snapcraft.yaml
src/: lib.rs  main.rs
src/app/: interactive.rs  opts.rs
src/score/: comparer.rs  config.rs  mod.rs  mod_old.rs
src/search/: mod.rs  parallel.rs
