[package]
name = "fzyr"
version = "0.1.0"
authors = ["yonni12 <https://github.com/yonni12>"]

description = "A fuzzy(er) finder 🔎"
repository = "https://github.com/yonni12/fzyr"
# TODO:
# documentation = ""

readme = "README.md"
categories = ["algorithms", "command-line-utilites"]
keywords = ["fuzzy", "finder", "find", "search"]
license = "MIT"
license-file = "LICENSE"

autobins = false


[lib]
name = "fzyr"


[[bin]]
name = "fzyr"
path = "src/bin/main.rs"
doc = false


[dependencies]
ndarray = "^0.11.2"
itertools = "^0.7.8"
crossbeam = "^0.4.1"
bit-vec = "^0.5.0"
clap = "^2.32.0"
console = "^0.6.1"


[profile.release]
opt-level = 3
debug = false
lto = true
