[package]
name = "fzyr"
version = "0.2.0"
homepage = "https://github.com/jmaargh/fzyr"
authors = ["jmaargh <https://github.com/jmaargh>"]

description = "A fuzzy(er) finder 🔎"
repository = "https://github.com/jmaargh/fzyr"
# TODO:
# documentation = ""

readme = "README.md"
categories = ["algorithms", "command-line-utilities"]
keywords = ["fuzzy", "finder", "find", "search"]
license-file = "LICENSE"

autobins = false


[lib]
name = "fzyr"


[[bin]]
name = "fzyr"
path = "src/bin/main.rs"
doc = false
required-features = ["binary-build"]


[dependencies]
ndarray = "^0.15"
bit-vec = "^0.6.0"
itertools = { version = "^0.10", optional = true }
crossbeam = { version = "^0.8", optional = true }
clap = { version = "^3.1", optional = true }
console = { version = "^0.15", optional = true }

[features]
default = ["binary-build", "parallel"]
binary-build = ["clap", "console"]
parallel = ["itertools", "crossbeam"]

[profile.release]
opt-level = 3
debug = false
lto = true
